initialization test passing